use play evolutions rather than slick

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,12 +4,9 @@ play.filters.enabled += "play.filters.csrf.CSRFFilter"
 play.evolutions.autoApply=true
 play.evolutions.enabled=true
 
-slick.dbs.app {
-  profile = "slick.jdbc.PostgresProfile$"
-  db {
-    driver = "org.postgresql.Driver"
-    url = "jdbc:postgresql://localhost:5432/app?reWriteBatchedInserts=true&prepareThreshold=1&preparedStatementCacheQueries=1024&preparedStatementCacheSizeMiB=64"
-    user = "app"
-    password = "password"
-  }
-}
+play.db.default = "app"
+
+db.app.driver="org.postgresql.Driver"
+db.app.url="jdbc:postgresql://localhost:5432/app?reWriteBatchedInserts=true&prepareThreshold=1&preparedStatementCacheQueries=1024&preparedStatementCacheSizeMiB=64"
+db.app.username="app"
+db.app.password="password"
