--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,2 +1,15 @@
 # https://www.playframework.com/documentation/latest/Configuration
 play.filters.enabled += "play.filters.csrf.CSRFFilter"
+
+play.evolutions.autoApply=true
+play.evolutions.enabled=true
+
+slick.dbs.app {
+  profile = "slick.jdbc.PostgresProfile$"
+  db {
+    driver = "org.postgresql.Driver"
+    url = "jdbc:postgresql://localhost:5432/app?reWriteBatchedInserts=true&prepareThreshold=1&preparedStatementCacheQueries=1024&preparedStatementCacheSizeMiB=64"
+    user = "app"
+    password = "password"
+  }
+}
