add jdbc access

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,3 +10,12 @@ db.app.driver="org.postgresql.Driver"
 db.app.url="jdbc:postgresql://localhost:5432/app?reWriteBatchedInserts=true&prepareThreshold=1&preparedStatementCacheQueries=1024&preparedStatementCacheSizeMiB=64"
 db.app.username="app"
 db.app.password="password"
+
+
+database.dispatcher {
+  executor = "thread-pool-executor"
+  throughput = 1
+  thread-pool-executor {
+    fixed-pool-size = 5
+  }
+}
