fix error time conversion

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,7 +6,7 @@ play.evolutions.enabled=true
 
 play.db.default = "app"
 #play.http.errorHandler = play.api.http.JsonHttpErrorHandler
-#play.http.errorHandler = "com.cask.ErrorHandler"
+play.http.errorHandler = com.cask.ErrorHandler
 
 play.filters.enabled += "play.filters.cors.CORSFilter"
 play.filters.cors {
