add further support for registration

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,12 +5,16 @@ play.evolutions.autoApply=true
 play.evolutions.enabled=true
 
 play.db.default = "app"
+play.http.errorHandler = play.api.http.JsonHttpErrorHandler
 
 db.app.driver="org.postgresql.Driver"
 db.app.url="jdbc:postgresql://localhost:5432/app?reWriteBatchedInserts=true&prepareThreshold=1&preparedStatementCacheQueries=1024&preparedStatementCacheSizeMiB=64"
 db.app.username="app"
 db.app.password="password"
 
+app {
+    salt = "B0XRA450WURQOCQI1UJYIZLA6M5F5B6Z"
+}
 
 database.dispatcher {
   executor = "thread-pool-executor"
