add cors filter and error handler

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,15 @@ play.evolutions.autoApply=true
 play.evolutions.enabled=true
 
 play.db.default = "app"
-play.http.errorHandler = play.api.http.JsonHttpErrorHandler
+#play.http.errorHandler = play.api.http.JsonHttpErrorHandler
+#play.http.errorHandler = "com.cask.ErrorHandler"
+
+play.filters.enabled += "play.filters.cors.CORSFilter"
+play.filters.cors {
+  pathPrefixes = ["/api"]
+  allowedOrigins = ["http://localhost"]
+}
+
 
 db.app.driver="org.postgresql.Driver"
 db.app.url="jdbc:postgresql://localhost:5432/app?reWriteBatchedInserts=true&prepareThreshold=1&preparedStatementCacheQueries=1024&preparedStatementCacheSizeMiB=64"
