add sending emails

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -31,3 +31,13 @@ database.dispatcher {
     fixed-pool-size = 5
   }
 }
+
+mail.smtp{
+    clientId=""
+    clientSecret=""
+    refreshToken=""
+    host=smtp.gmail.com
+    sender=""
+}
+
+include "local.conf"
