--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,6 +17,9 @@ play.filters.cors {
 }
 
 
+frontendUrl="http://localhost:80"
+
+
 db.app.driver="org.postgresql.Driver"
 db.app.url="jdbc:postgresql://localhost:5432/app?reWriteBatchedInserts=true&prepareThreshold=1&preparedStatementCacheQueries=1024&preparedStatementCacheSizeMiB=64"
 db.app.username="app"
