add /api/auth/session to get session data if logged in

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,7 +10,7 @@ play = {
         enabled += "play.filters.cors.CORSFilter"
         cors  = {
           pathPrefixes = ["/api"]
-          allowedOrigins = ["http://localhost", "localhost"]
+          allowedOrigins = ["http://localhost", "localhost", "http://localhost:5173"]
         }
     }
     http = {
