--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,17 +69,53 @@ play = {
         }
     }
 }
-
+play.modules.enabled += "com.cask.db.DatabaseProviderModule"
 play.db.default = "app"
 
 
 frontendUrl="http://localhost:80"
 
 
-db.app.driver="org.postgresql.Driver"
-db.app.url="jdbc:postgresql://localhost:5432/app?reWriteBatchedInserts=true&prepareThreshold=1&preparedStatementCacheQueries=1024&preparedStatementCacheSizeMiB=64"
-db.app.username="app"
-db.app.password="password"
+db.app{
+    driver="org.postgresql.Driver"
+    url="jdbc:postgresql://localhost:5432/app?reWriteBatchedInserts=true&prepareThreshold=1&preparedStatementCacheQueries=1024&preparedStatementCacheSizeMiB=64"
+    username="app"
+    password="password"
+    connectionPool = disabled
+    keepAliveConnection = true
+}
+
+
+slick.dbs.app {
+  profile = "slick.jdbc.PostgresProfile$"
+  db {
+    driver = "org.postgresql.Driver"
+    url = "jdbc:postgresql://localhost:5432/app?reWriteBatchedInserts=true&prepareThreshold=1&preparedStatementCacheQueries=1024&preparedStatementCacheSizeMiB=64"
+    user = "app"
+    password = "password"
+
+    maxConnections = 90
+    connectionTimeout = 5000 ms
+    password="postgres"
+    numThreads = 10
+    connectionPool = disabled
+    keepAliveConnection = true
+  }
+}
+
+app = {
+  connectionPool = "HikariCP"
+  dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
+  properties = {
+    serverName = "localhost"
+    portNumber = "5432"
+    databaseName = "app"
+    user = "app"
+    password = "password"
+  }
+  numThreads = 10
+}
+
 
 app {
     salt = "B0XRA450WURQOCQI1UJYIZLA6M5F5B6Z"
