removed % test from build.sbt  and changed config style, also changed path for Database.forConfig

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -75,19 +75,10 @@ play.db.default = "app"
 
 frontendUrl="http://localhost:80"
 
-app = {
-  connectionPool = "HikariCP"
-  dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
-  properties = {
-    serverName = "localhost"
-    portNumber = "5432"
-    databaseName = "app"
-    user = "app"
-    password = "password"
-  }
-  numThreads = 10
-}
-
+slick.dbs.app.profile="slick.jdbc.PostgresProfile$"
+slick.dbs.app.db.url = "jdbc:postgresql://localhost:5432/app"
+slick.dbs.app.db.user="app"
+slick.dbs.app.db.password="password"
 
 app {
     salt = "B0XRA450WURQOCQI1UJYIZLA6M5F5B6Z"
